# MiniProject_Shun

./: .coverage  .gitignore  README.md  README.rst  app.py  app_notebook.ipynb  miniproject.ipynb  my_project.code-workspace  pyproject.toml  test.py  tox.ini
src/: app.py  logger.py
src/debug_lesson/example1/: calculator.py
src/debug_lesson/example1/tests/: test_calculator.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/package_name/: logger.py
src/package_name/tools/: calculator.py
src/testing_examples/example1_calculator/: calculator.py
src/testing_examples/example1_calculator/tests/: test_calculator.py  test_other_test.py
tests/tools/: test_calculator.py
tests/utils/: test_calculator.py
